modification build.sbt to make spark works